Fix certificate related tests
svn path=/trunk/; revision=40103


Former-commit-id: 1e1e16736be1218b3ba60c059cc84286cb68cc40